# alertlogic-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  main.py  pyproject.toml  requirements.txt  server.json  smoke_test.py
.github/workflows/: publish-mcp.yml  test.yml
alertlogic_mcp/: __init__.py  server.py
alertlogic_mcp/modules/: account_management.py  aecontent.py  aefr.py  aemanual.py  aepublish.py  aerta.py  aetag.py  album.py  assets.py  assets_manager.py  auth.py  azure_explorer.py  base.py  billing.py  bulk_ops.py  cloud_explorer.py  common.py  compliance.py  credentials.py  deployments.py  environments.py  incidents_mcp.py  informant.py  ingest_module.py  kalm.py  logging_integration.py  network_controls.py  notify.py  otis.py  policies.py  scan_result.py  scan_scheduler.py  search_stylist.py  seceng.py  soar.py  soc.py  soc_playbooks.py  strawboss.py  suggestions.py  tacoma.py  (+7 more)
modules/: __init__.py  account_management.py  aecontent.py  aefr.py  aemanual.py  aepublish.py  aerta.py  aetag.py  album.py  assets.py  assets_manager.py  auth.py  azure_explorer.py  base.py  billing.py  bulk_ops.py  cloud_explorer.py  common.py  compliance.py  credentials.py  deployments.py  environments.py  incidents_mcp.py  informant.py  ingest_module.py  kalm.py  logging_integration.py  network_controls.py  notify.py  otis.py  policies.py  scan_result.py  scan_scheduler.py  search_stylist.py  seceng.py  soar.py  soc.py  soc_playbooks.py  strawboss.py  suggestions.py  (+8 more)
tests/: test_base.py
(+1 files in other folders)
